# ChessProject

./: .gitignore
ChessProject/: ChessProject.sln
ChessProject/ChessProject/: Board.cpp  Board.h  Broad.cpp  Broad.h  Chess.cpp  Chess.h  ChessProject.vcxproj  ChessProject.vcxproj.filters  Header.h  Log.cpp  Log.h  Player.cpp  Player.h  Position.cpp  Position.h  main.cpp
ChessProject/ChessProject/Debug/: ChessProject.exe.recipe  ChessProject.ilk  vc142.idb
ChessProject/ChessProject/Debug/ChessProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChessProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ChessProject/ChessProject/x64/Debug/: ChessProject.exe.recipe  ChessProject.ilk  vc142.idb
ChessProject/ChessProject/x64/Debug/ChessProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChessProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FrontEnd/: index.js  package-lock.json  package.json  run.bat
FrontEnd/application/Chess/: CMakeLists.txt
FrontEnd/application/Chess/ChessProject/: Board.cpp  Board.h  Chess.cpp  Chess.h  DataType.h  Game.cpp  Game.h  Log.h  Position.h  ViewManager.cpp  ViewManager.h  main.cpp
FrontEnd/application/test/: CMakeLists.txt  main.cpp
FrontEnd/www/: Lobby.html  Lobby.js  LobbyStyle.css  PlayRoom.html  PlayRoom.js  PlayRoomStyle.css  button.css  index.html  lightbox.css  script.js  test.html
FrontEnd/www/api/: Game.js  PlayChess.js  Socket.js  dom-to-image.js
